--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet"> 
-    <title>quiz-app</title>
+    <title>Quiz Aapp</title>
 </head>
 <body>
     <div class="quiz-body">
-        <div class="quis-container" id="quiz">
+        <div class="quiz-container" id="quiz">
             <div class="quiz-hearder">
                 <h2 id="question">Questions</h2>
                 <ul>
