--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="quiz-body">
-        <div class="quis-container" id="quiz">
+        <div class="quiz-container" id="quiz">
             <div class="quiz-hearder">
                 <h2 id="question">Questions</h2>
                 <ul>
