update the content

--- a/index.html
+++ b/index.html
@@ -8,10 +8,14 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap" rel="stylesheet"> 
     <title>Quiz Aapp</title>
 </head>
 <body>
+    <div class="home">
+        <h1>DEV QUIZ</h1>
+        <p id="count">00</p>
+    </div>
     <div class="quiz-body">
         <div class="quiz-container" id="quiz">
             <div class="quiz-hearder">
@@ -40,7 +44,9 @@
             </div>
             <button id="sub">submite</button>
         </div>
-    
+        <div class="image">
+            <img src="images/question.png" alt="#" />
+        </div>
     </div>
     
     <script src="index.js"></script>
